--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Duramate - Roofing Services</title>
-    <meta name="description" content="Roofx - Roofing Services HTML Template" />
+    <meta name="description" content="Duramate-Roofing" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
@@ -26,25 +26,12 @@
     <link rel="stylesheet" href="assets/css/jarallax.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
-       <link
+    <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
   </head>
   <body>
-    <!-- Preloader-start -->
-    <div id="preloader">
-      <div class="ta-preloader-block">
-        <div class="ta-spinner-eff">
-          <div class="ta-bar ta-bar-top"></div>
-          <div class="ta-bar ta-bar-right"></div>
-          <div class="ta-bar ta-bar-bottom"></div>
-          <div class="ta-bar ta-bar-left"></div>
-        </div>
-      </div>
-    </div>
-    <!-- Preloader-start-end -->
-
     <!-- Scroll-top -->
     <button class="scroll-top scroll-to-target" data-target="html">
       <i class="fas fa-level-up-alt"></i>
@@ -86,8 +73,6 @@
                       <li><a href="#">Home</a></li>
                       <li><a href="#">About us</a></li>
                       <li><a href="#">Product</a></li>
-                      <li><a href="#">Gallery</a></li>
-                      <li><a href="#">Project</a></li>
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
@@ -129,9 +114,6 @@
                       <li>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                       </li>
-                      <li>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                      </li>
                     </ul>
                   </div>
                 </nav>
@@ -155,7 +137,7 @@
         ></div>
         <div
           class="banner-bg"
-          data-background="assets/img/banner/banner-img.png"
+          data-background="assets/img/banner/banner-img-1.jpg"
         >
           <div class="banner-content">
             <h2 class="title wow fadeInDown" data-wow-delay=".2s">
@@ -177,7 +159,7 @@
               <div class="tooltip-content">
                 <img
                   style="height: 10em"
-                  src="assets/img/banner/Sub-banner-1.png"
+                  src="assets/img/banner/banner-img-1.jpg"
                   alt=""
                 />
               </div>
@@ -189,7 +171,7 @@
               <div class="tooltip-content">
                 <img
                   style="height: 10em"
-                  src="assets//img/banner/sub-banner-2.png"
+                  src="assets//img/banner/banner-img-2.jpg"
                   alt=""
                 />
               </div>
@@ -201,7 +183,7 @@
               <div class="tooltip-content">
                 <img
                   style="height: 10em"
-                  src="assets/img/banner/sub-banner-3.png"
+                  src="assets/img/banner/banner-img-3.jpg"
                   alt=""
                 />
               </div>
@@ -210,7 +192,7 @@
         </div>
 
         <!-- brand-area -->
-        <div class="brand-area">
+        <!-- <div class="brand-area">
           <div class="container">
             <div class="brand-inner">
               <div class="row brand-active">
@@ -256,7 +238,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- brand-area-end -->
       </section>
       <!-- banner-area-end -->
@@ -355,7 +337,7 @@
                     </div>
                     <div class="content">
                       <h6 class="title">
-                        We have more than 10 years of experiences
+                        We have 3 years Professional experiences
                       </h6>
                     </div>
                   </div>
@@ -385,12 +367,14 @@
                   </h2>
                 </div>
                 <p>
-                  Discover Duramate, your premier choice for top-quality roofing
-                  sheets since 2015. Our commitment to excellence shines through
-                  in every durable and resilient solution we offer, crafted with
-                  the finest materials to meet the highest standards. Embracing
-                  innovation and sustainability, we provide cutting-edge options
-                  that enhance your property's aesthetics.
+                  Duamate is one of the leading brands in Kerala, offering a
+                  10-year warranty on its products. The brand, established in
+                  2021, quickly expanded across the Kerala market within just
+                  three years. Our materials and machinery are of the highest
+                  quality, ensuring fine craftsmanship and durability. We
+                  prioritize the use of top-notch materials in our production
+                  processes, maintaining the exceptional quality that defines
+                  our brand
                 </p>
                 <div class="about-list">
                   <ul class="list-wrap">
@@ -630,141 +614,6 @@
       </section>
       <!-- project-area-end -->
 
-      <!-- team-area -->
-      <section class="team-area pt-115 pb-90">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div
-                class="section-title text-center mb-60 tg-heading-subheading animation-style3"
-              >
-                <span class="sub-title tg-element-title">Team</span>
-                <h2 class="title tg-element-title">Meet Our Team</h2>
-              </div>
-            </div>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-10">
-              <div class="team-item">
-                <div class="team-thumb">
-                  <a href="#"
-                    ><img src="assets/img/team/Team-1.png" alt=""
-                  /></a>
-                  <div class="team-social">
-                    <ul class="list-wrap">
-                      <li>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h2 class="title"><a href="#">Robert</a></h2>
-                  <span>Roof Engineer</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-10">
-              <div class="team-item">
-                <div class="team-thumb">
-                  <a href="#"
-                    ><img src="assets/img/team/Team-2.png" alt=""
-                  /></a>
-                  <div class="team-social">
-                    <ul class="list-wrap">
-                      <li>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h2 class="title"><a href="#">Jhon</a></h2>
-                  <span>Roof Engineer</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-10">
-              <div class="team-item">
-                <div class="team-thumb">
-                  <a href="#"
-                    ><img src="assets/img/team/Team-3.png" alt=""
-                  /></a>
-                  <div class="team-social">
-                    <ul class="list-wrap">
-                      <li>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h2 class="title"><a href="#">Muhammed Ali</a></h2>
-                  <span>Roof Engineer</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-10">
-              <div class="team-item">
-                <div class="team-thumb">
-                  <a href="#"
-                    ><img src="assets/img/team/Team-4.png" alt=""
-                  /></a>
-                  <div class="team-social">
-                    <ul class="list-wrap">
-                      <li>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h2 class="title"><a href="#">Muahmmed Ahamd</a></h2>
-                  <span>Roof Engineer</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- team-area-end -->
-
       <!-- testimonial-area -->
       <section class="testimonial-area pt-115 pb-120">
         <div class="container">
@@ -873,7 +722,10 @@
               <div class="blog-post-item">
                 <div class="blog-post-thumb">
                   <a href="#"
-                    ><img src="assets/img/images/product-1.png" alt=""
+                    ><img
+                      style="width: 100%"
+                      src="assets/img/images/product-1.png"
+                      alt=""
                   /></a>
                 </div>
                 <div class="blog-post-content">
@@ -881,34 +733,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-4 col-md-6">
-              <div class="blog-post-item">
-                <div class="blog-post-thumb">
-                  <a href="#"
-                    ><img src="assets/img/images/product-2.png" alt=""
-                  /></a>
-                </div>
-                <div class="blog-post-content">
-                  <a href="#" class="tag">Roofing Sheet</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-4 col-md-6">
-              <div class="blog-post-item">
-                <div class="blog-post-thumb">
-                  <a href="#"
-                    ><img src="assets/img/images/product-3.png" alt=""
-                  /></a>
-                </div>
-                <div class="blog-post-content">
-                  <a href="#" class="tag">Roofing Sheet</a>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </section>
       <!-- blog-area-end -->
+      <section class="project-details-area pt pb-120">
+        <div
+          style="background-color: azure; border-radius: 1rem"
+          class="container"
+        >
+
+        </div>
+      </section>
 
       <!-- newsletter-area -->
       <section
