--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                   </div>
                   <div class="navbar-wrap main-menu d-none d-lg-flex">
                     <ul class="navigation">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About us</a></li>
+                      <li  class="active"><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About us</a></li>
                       <li><a href="#">Product</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </div>
                   <div class="header-action d-none d-md-block">
@@ -103,13 +103,13 @@
                   <div class="social-links">
                     <ul class="clearfix list-wrap">
                       <li>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100092019233742"><i class="fab fa-facebook-f"></i></a>
                       </li>
                       <li>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/duramate_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
                       </li>
                       <li>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -823,23 +823,25 @@
                 <div class="footer-widget">
                   <h2 class="fw-title">Our Product</h2>
                   <div class="footer-link">
-                    <ul class="list-wrap">
+                     <ul class="list-wrap">
                       <li>
                         <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>Roofing
-                          Sheet</a
+                          ><i class="fas fa-angle-double-right"></i>Crimp Sheet</a
                         >
                       </li>
                       <li>
                         <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>Wall
-                          cladding sheet</a
+                          ><i class="fas fa-angle-double-right"></i>Arch Sheet</a
                         >
                       </li>
                       <li>
                         <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>UPVC
-                          Sheet</a
+                          ><i class="fas fa-angle-double-right"></i>Ridge</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-angle-double-right"></i>Valley Gutter</a
                         >
                       </li>
                       <li>
@@ -857,12 +859,12 @@
                   <div class="footer-link">
                     <ul class="list-wrap">
                       <li>
-                        <a href="#"
+                        <a href="index.html"
                           ><i class="fas fa-angle-double-right"></i>Home</a
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="about.html"
                           ><i class="fas fa-angle-double-right"></i>About</a
                         >
                       </li>
@@ -877,7 +879,7 @@
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="contact.html"
                           ><i class="fas fa-angle-double-right"></i>Contact
                           Us</a
                         >
@@ -942,7 +944,7 @@
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/duramate_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
                       </li>
                     </ul>
                   </div>
