contact page edited

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Roofx - Roofing Services HTML Template</title>
+    <title>Duramate - Roofing service</title>
     <meta name="description" content="Roofx - Roofing Services HTML Template" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
