product page completed

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                     <ul class="navigation">
                       <li><a href="index.html">Home</a></li>
                       <li  class="active"><a  href="about.html" >About us</a></li>
-                      <li><a href="#">Product</a></li>
+                      <li><a href="product.html">Product</a></li>
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </div>
@@ -779,13 +779,8 @@
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="product.html"
                           ><i class="fas fa-angle-double-right"></i>Product</a
-                        >
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>Project</a
                         >
                       </li>
                       <li>
