--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,6 @@
       rel="shortcut icon"
       type="image/x-icon"
       href="assets/img/Duramate-LOGO.png"
-      <!--
-      CSS
-      here
-      --
     />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/animate.min.css" />
@@ -384,13 +380,8 @@
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="product.html"
                           ><i class="fas fa-angle-double-right"></i>Product</a
-                        >
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>Project</a
                         >
                       </li>
                       <li>
