--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <ul class="navigation">
                       <li  class="active"><a href="index.html">Home</a></li>
                       <li><a href="about.html">About us</a></li>
-                      <li><a href="#">Product</a></li>
+                      <li><a href="product.html">Product</a></li>
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </div>
@@ -547,7 +547,7 @@
                     </p>
                   </div>
                   <div class="project-link">
-                    <a href="#"><i class="fas fa-arrow-right"></i></a>
+                    <a href="product.html"><i class="fas fa-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -566,7 +566,7 @@
                     </p>
                   </div>
                   <div class="project-link">
-                    <a href="#"><i class="fas fa-arrow-right"></i></a>
+                    <a href="product.html"><i class="fas fa-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -585,7 +585,7 @@
                     </p>
                   </div>
                   <div class="project-link">
-                    <a href="#"><i class="fas fa-arrow-right"></i></a>
+                    <a href="product.html"><i class="fas fa-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -604,7 +604,7 @@
                     </p>
                   </div>
                   <div class="project-link">
-                    <a href="#"><i class="fas fa-arrow-right"></i></a>
+                    <a href="product.html"><i class="fas fa-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -869,13 +869,8 @@
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="product.html"
                           ><i class="fas fa-angle-double-right"></i>Product</a
-                        >
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>Project</a
                         >
                       </li>
                       <li>
