Footer problem fixed

--- a/product.html
+++ b/product.html
@@ -32,7 +32,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
     <style>
-      .container {
+      .containers {
         max-width: 1200px;
         margin: 0 auto;
         padding: 20px;
@@ -41,9 +41,9 @@
       h4 {
         text-align: center;
       }
-      ul {
+      /* ul {
         padding-left: 20px;
-      }
+      } */
       ul li:hover {
         color: black;
         position: relative;
@@ -392,7 +392,7 @@
 
       <!-- Do's and Dont's -->
       <section>
-        <div class="container">
+        <div class="containers">
           <div class="row">
             <div
               style="
@@ -587,17 +587,15 @@
                 <div class="footer-widget">
                   <h2 class="fw-title">Our Product</h2>
                   <div class="footer-link">
-                    <ul class="list-wrap">
+                     <ul class="list-wrap">
                       <li>
                         <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>Crimp
-                          Sheet</a
+                          ><i class="fas fa-angle-double-right"></i>Crimp Sheet</a
                         >
                       </li>
                       <li>
                         <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>Arch
-                          Sheet</a
+                          ><i class="fas fa-angle-double-right"></i>Arch Sheet</a
                         >
                       </li>
                       <li>
@@ -607,8 +605,7 @@
                       </li>
                       <li>
                         <a href="#"
-                          ><i class="fas fa-angle-double-right"></i>Valley
-                          Gutter</a
+                          ><i class="fas fa-angle-double-right"></i>Valley Gutter</a
                         >
                       </li>
                       <li>
@@ -706,10 +703,7 @@
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                       </li>
                       <li>
-                        <a
-                          href="https://www.instagram.com/duramate_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                          ><i class="fab fa-instagram"></i
-                        ></a>
+                        <a href="https://www.instagram.com/duramate_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
                       </li>
                     </ul>
                   </div>
