new images added

--- a/about.html
+++ b/about.html
@@ -168,13 +168,13 @@
             <div class="col-xl-7 col-lg-6 order-0 order-lg-2">
               <div class="about-img-wrap">
                 <img
-                  src="assets/img/images/About-img-1.png"
+                  src="assets/img/images/ABOUT-1.png"
                   alt=""
                   class="wow fadeInRight"
                   data-wow-delay=".4s"
                 />
                 <img
-                  src="assets/img/images/About-img-2.png"
+                  src="assets/img/images/ABOUT-2-IMG (2).png"
                   alt=""
                   class="wow fadeInRight"
                   data-wow-delay=".2s"
