--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
               Best Roofing Services and Consulting
             </h2>
             <p class="wow fadeInUp" data-wow-delay=".2s">
-              There are many variations of passages of Lorem as Ipsumoff
-              available, but the majority have suffered alt.
+              Expert roofing solutions and consulting for residential and
+              commercial properties
             </p>
           </div>
           <div class="banner-tooltip-wrap">
@@ -630,7 +630,7 @@
                     >Quality Roofing Contact From</span
                   >
                   <h2 class="title tg-element-title">
-                    Need Any Roofing  Services?
+                    Need Any Roofing Services?
                   </h2>
                 </div>
               </div>
