--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                   <div class="logo different-logo">
                     <a href="index.html"
                       ><img
-                        src="assets/img/logo/Duramate-LOGO header-1.png"
+                      style="padding-left: 1.3rem;"
+                        src="assets/img/logo/Duramate-LOGO header.png"
                         alt="Logo"
                     /></a>
                   </div>
@@ -137,10 +138,10 @@
     <main>
       <!-- banner-area -->
       <section class="banner-area">
-        <div
+        <!-- <div
           class="banner-shape"
           data-background="assets/img/banner/banner_shape-1.jpg"
-        ></div>
+        ></div> -->
         <div
           class="banner-bg"
           data-background="assets/img/banner/banner-img-1.jpg"
@@ -193,56 +194,6 @@
             </div>
           </div>
         </div>
-
-        <!-- brand-area -->
-        <!-- <div class="brand-area">
-          <div class="container">
-            <div class="brand-inner">
-              <div class="row brand-active">
-                <div class="col-12">
-                  <div class="brand-item">
-                    <img
-                      style="width: 10rem; height: 10rem"
-                      src="assets/img/brand/brand-1 (2).png"
-                      alt=""
-                    />
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="brand-item">
-                    <img src="assets/img/brand/brand_img02.png" alt="" />
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="brand-item">
-                    <img src="assets/img/brand/brand_img03.png" alt="" />
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="brand-item">
-                    <img src="assets/img/brand/brand_img04.png" alt="" />
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="brand-item">
-                    <img src="assets/img/brand/brand_img05.png" alt="" />
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="brand-item">
-                    <img src="assets/img/brand/brand_img06.png" alt="" />
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="brand-item">
-                    <img src="assets/img/brand/brand_img03.png" alt="" />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-        <!-- brand-area-end -->
       </section>
       <!-- banner-area-end -->
 
@@ -260,9 +211,6 @@
                       top-quality materials for resilient and long-lasting
                       solutions. Excellence you can trust.
                     </p>
-                    <a href="#" class="link-btn"
-                      ><i class="fas fa-arrow-right"></i> Read More</a
-                    >
                   </div>
                   <div class="features-icon">
                     <img src="assets/img/icon/features_icon01.svg" alt="" />
@@ -280,9 +228,6 @@
                       ensures precision, reliability, and excellence in every
                       production. Trust us for quality craftsmanship.
                     </p>
-                    <a href="#" class="link-btn"
-                      ><i class="fas fa-arrow-right"></i> Read More</a
-                    >
                   </div>
                   <div class="features-icon">
                     <img src="assets/img/icon/features_icon02.svg" alt="" />
@@ -300,9 +245,6 @@
                       and efficiently. We prioritise careful handling and
                       expedite delivery to meet your needs.
                     </p>
-                    <a href="#" class="link-btn"
-                      ><i class="fas fa-arrow-right"></i> Read More</a
-                    >
                   </div>
                   <div class="features-icon">
                     <img src="assets/img/icon/features_icon03.svg" alt="" />
@@ -322,13 +264,13 @@
             <div class="col-xl-7 col-lg-6 order-0 order-lg-2">
               <div class="about-img-wrap">
                 <img
-                  src="assets/img/images/about-1-img.png"
+                  src="assets/img/images/About-IMG-4.png"
                   alt=""
                   class="wow fadeInRight"
                   data-wow-delay=".4s"
                 />
                 <img
-                  src="assets/img/images/about-2-img.png"
+                  src="assets/img/images/ABOUT-IMG6.png"
                   alt=""
                   class="wow fadeInRight"
                   data-wow-delay=".2s"
@@ -520,7 +462,7 @@
           <div class="row align-items-center">
             <div class="col-lg-6 wow fadeInLeft" data-wow-delay=".2s">
               <div class="testimonial-img">
-                <img src="assets/img/team/Bg-person.png" alt="" />
+                <img src="assets/img/team/Testmonils-bg.png" alt="" />
               </div>
             </div>
             <div class="col-lg-6">
