images updated in about section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <div class="logo different-logo">
                     <a href="index.html"
                       ><img
-                      style="padding-left: 1.3rem;"
+                        style="padding-left: 1.3rem"
                         src="assets/img/logo/Duramate-LOGO header.png"
                         alt="Logo"
                     /></a>
@@ -691,24 +691,31 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-4 col-lg-5 col-md-6">
-                <div class="footer-widget">
-                  <h2 class="fw-title">Location</h2>
-                  <div class="footer-instagram">
-                    <div class="google-maps">
-                      <!-- Height=450px; Width=600px -->
-                      <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31129.308882259513!2d76.65134152427458!3d10.782136154064017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba957153dc9c51f%3A0x3030b4e1ba011e46!2sPalakkad%2C%20Kerala!5e0!3m2!1sen!2sin!4v1646840080583!5m2!1sen!2sin"
-                        width="600"
-                        height="450"
-                        frameborder="0"
-                        style="border: 0"
-                        allowfullscreen=""
-                        loading="lazy"
-                      ></iframe>
+              <div class="footer-box footer-newsletter">
+                <div class="row">
+                  <div class="col-xl-8 col-lg-7 col-md-6"></div>
+
+                  <div class="col-xl-4 col-lg-5 col-md-6 map-container">
+                    <div class="footer-widget">
+                      <h2 class="fw-title">Location</h2>
+                      <div class="footer-instagram">
+                        <div class="google-maps">
+                          <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31129.308882259513!2d76.65134152427458!3d10.782136154064017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba957153dc9c51f%3A0x3030b4e1ba011e46!2sPalakkad%2C%20Kerala!5e0!3m2!1sen!2sin!4v1646840080583!5m2!1sen!2sin"
+                            width="100%"
+                            height="400"
+                            frameborder="0"
+                            style="border: 0"
+                            allowfullscreen=""
+                            loading="lazy"
+                          ></iframe>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
+
+                <div class="social-links"></div>
               </div>
             </div>
             <div class="footer-logo-area">
