--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                     <ul class="navigation">
                       <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About us</a></li>
-                      <li><a href="#">Product</a></li>
+                      <li><a href="product.html">Product</a></li>
                       <li class="active"><a href="contact.html">Contact</a></li>
                     </ul>
                   </div>
